fixed text in dark mode

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -468,3 +468,7 @@ footer {
 
     order: 2;
 }
+
+.membership {
+    color: var(--color-on-light);
+}
