--- a/chamber/styles/colors-and-fonts.css
+++ b/chamber/styles/colors-and-fonts.css
@@ -8,5 +8,6 @@
     --special-font: 'Playfair Display', sans-serif;
     --text-font: 'Roboto', sans-serif;
     --text-box-color: #B0CFC9;
+    --color-on-light: #0D0D0D;
 
 }
