--- a/chamber/styles/dm-colors-and-fonts.css
+++ b/chamber/styles/dm-colors-and-fonts.css
@@ -8,5 +8,6 @@
     --special-font: 'Playfair Display', sans-serif;
     --text-font: 'Roboto', sans-serif;
     --text-box-color: #B0B0B0;
+    --color-on-light: #F2F2F2;
 
 }
